--- a/MemoryEye/MemoryEye/Info.plist
+++ b/MemoryEye/MemoryEye/Info.plist
@@ -23,7 +23,11 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>HomePage</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Let us use!</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Give it to me!</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
